# packet-test

./: Cargo.toml  README.md  packets.excalidraw
doc/: packets.excalidraw
examples/: basic.rs  server.rs  test.rs
src/: client.rs  config.rs  lib.rs  net.rs  packet.rs  server.rs
src/net/: client.rs  server.rs
src/packet/: receive.rs  send.rs  serialize.rs
