[package]
name = "packet-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = { version = "0.13.0", default-features = false, features = [
#     "bevy_asset",
#     "bevy_core_pipeline",
#     "bevy_render",
#     "bevy_sprite",
#     "bevy_winit",
# ] }
bitvec = "1.0.1"
num_enum = "0.7.2"
rkyv = { version = "0.7.44", features = ["validation", "archive_le"] }
thiserror = "1.0.57"
uuid = { version = "1.7.0", features = ["v4"] }
